# GmailScraper

./: .gitignore  Dockerfile  README.md  bootstrap_auth.py  claude-code-spec.md  docker-compose.yml  gmail_scraper_gui.spec  gui_main.py  pyproject.toml
.github/workflows/: debug-build.yml  release.yml
gmail_scraper/: __main__.py  auth.py  db.py  enumerate.py  fetch.py  log.py  parse.py  ratelimit.py  storage.py
gui/: app.py  log_handler.py  settings.py  setup_screen.py  sync_screen.py  worker.py
resources/: claude-code-spec.md  gui-spec.md
tests/: test_parse.py  test_ratelimit.py  test_storage.py
tests/fixtures/: multipart_html.eml  plain_text.eml  with_attachment.eml
